# plugin-daily

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: README.md  daily_logic.rs  host_bridge.rs  lib.rs
src/ui/: panel.html
