[package]
name = "diaryx_daily_extism"
version = "0.1.4"
edition = "2024"
rust-version = "1.91"
license-file = "LICENSE.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
diaryx_core = "1.3.0"
extism-pdk = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
chrono-english = "0.1"
indexmap = { version = "2", features = ["serde"] }
diaryx_plugin_sdk = { version = "0.1.0", features = ["core", "getrandom-shim"] }
base64 = "0.22"
pathdiff = "0.2"
thiserror = "2"

[profile.release]
lto = "fat"
codegen-units = 1
